samples/_failures_safe/1761790445_3283a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a1c4c09.c: In function ‘print_token’:
./samples/SAFE/__tmp_9a1c4c09.c:170:25: error: expected declaration or statement at end of input
  170 | void print_token(struct Token token) {
      |                         ^~~~~
